2007-03-13	Alexander V. Lukyanov <lav@yars.free.net>

	* post-config.h: define __attribute__ for non-gcc compilers.
	* xstring.h: move to ../src/.

2006-07-22  Nix  <nix@esperi.org.uk>

        * gettext.h: Synch with gnulib-20060722.

2005-07-06	Alexander V. Lukyanov <lav@yars.free.net>

	* post-config.h: (replace_value) new template.

2005-03-24	Dmitry A. Yanko <fm@cross-road.org.ua>

	* post-config.h: fixed compilation with socks5.

2004-06-09	Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.h: fixed DECL checks.
	* post-config.h: fixed stdio replacement.

2004-06-03	Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.h: use new DECL defines (reported by Michael Schloh
	  von Bennewitz <michael.schloh@cw.com>).

2003-12-17	albert chin <china@thewrittenword.com>

	* xalloca.h: tweak for aix.

2003-12-17	Alexander V. Lukyanov <lav@yars.free.net>

	* post-config.h: include xalloca.h early; include sys/socket.h
	  and define socklen_t if needed.

2003-12-16	albert chin <china@thewrittenword.com>

	* post-config.h: Don't assume C++ compiler defines __STDC__.