@@ -1,5 +1,3 @@
 TRIO_FILES=trio.h triop.h trionan.h triodef.h triostr.h
-noinst_HEADERS = xalloca.h getopt.h xstring.h \
-		 gettext.h post-config.h \
-		 $(TRIO_FILES)
+noinst_HEADERS = xalloca.h getopt.h gettext.h post-config.h $(TRIO_FILES)
 DISTCLEANFILES = poll.h regex.h glob.h fnmatch.h readline libintl.h
